--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -8,10 +8,10 @@ on:
   push:
     branches:
       - main
-      - "dev-*"
+      - "devbranch"
       - "feat/**"
     paths-ignore:
-      - ".github/workflows/**"
+      - ".github/workflows/*"
 jobs:
   deploy:
     runs-on: ubuntu-latest
